--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "stock-ordering",
+  "name": "employee-login-info-sys-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start:stock-user-api": "nest start --watch --config stock-ordering-bootstrapper.json",
+    "start:employee-login-info-api": "nest start --watch --config employee-login-info-bootstrapper.json",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
