--- a/employee-login-info-bootstrapper.json
+++ b/employee-login-info-bootstrapper.json
@@ -1,5 +1,5 @@
 {
   "collection": "@nestjs/schematics",
   "sourceRoot": "src",
-  "entryFile": "stock-user-bootstrapper"
+  "entryFile": "employee-login-info-bootstrapper"
 }
